# BackOnCPP

./: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h
Model/Contact/: contact.cpp  contact.h
Model/FactoryPattern/: FactoryPattern.cpp  FactoryPattern.h
Model/FactoryPattern/AbstractProductA/: AbstractProductA.cpp  AbstractProductA.h
Model/FactoryPattern/ConcreteProduct/: ConcreteProduct.cpp  ConcreteProduct.h
